Fix ghost click issue on mobile alert

--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    -webkit-touch-callout: none;
+    /* Disable iOS system menu */
 }
 
 body::before {
